--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculator | Umit Kaya</title>
 </head>
+
 <body>
-    hello world!
+    <script src="script.js"></script>
 </body>
+
 </html>
